@@ -7,7 +7,7 @@
     <setting ref="appleII.video" name="characterSet" label="Character Set" type="select" options="Standard,Videx Lowercase Chip,Pigfont" />
     <setting ref="appleII.keyboard" name="type" label="Keyboard" type="select" options="Standard,Shift-Key Mod,Full ASCII" />
 </device>
-<port id="appleII.videoPort" ref="appleMonitorII.connector" type="Composite Video" label="Video Port" image="images/Generic/RCA Female.png">
+<port id="appleII.videoPort" ref="appleMonitorII.connector" type="Composite Video" label="Video Port" image="images/Connectors/RCA Female.png">
     <inlet ref="appleII.video" property="monitor" outletRef="monitor" />
 </port>
 <port id="appleII.slot0" ref="s0.conn" type="Apple II Slot" label="Slot 0" image="images/Apple/Apple II Slot.png">
@@ -237,7 +237,7 @@
     <setting ref="appleMonitorII.monitor" name="compositeBlackLevel" label="IRE Black Level" type="slider" options="0.0,1.0" />
     <setting ref="appleMonitorII.monitor" name="compositeWhiteLevel" label="IRE White Level" type="slider" options="0.0,1.0" />
 </device>
-<connector id="appleMonitorII.connector" ref="" type="Composite Video" label="Video Connector"/>
+<connector id="appleMonitorII.connector" ref="" type="Composite Video" label="Connector"/>
 <component id="appleMonitorII.monitor" class="Monitor">
     <property name="device" ref="appleMonitorII" />
     <property name="videoDecoder" value="RGB" />
@@ -272,19 +272,19 @@
     <setting ref="sgp.io" name="inputDevice" label="Input Device" type="select" options="None,Mouse,Joystick" />
     <setting ref="sgp.io" name="invertAxes" label="Invert Axes" type="checkbox" />
 </device>
-<connector id="sgp.conn" ref="" type="Apple II Game Port" label="Game Port Connector" />
+<connector id="sgp.conn" ref="" type="Apple II Game Port" label="Connector" />
 
 <device id="s0" label="Apple Language Card" image="images/Apple/Apple Language Card.png" group="expansions" />
-<connector id="s0.conn" ref="" type="Apple II Slot" label="Slot Connector" />
+<connector id="s0.conn" ref="" type="Apple II Slot" label="Connector" />
 
 
 
 <device id="s1" label="Apple Silentype Interface Card" image="images/Apple/Apple Synch Printer Interface Card.png" group="expansions" />
-<connector id="s1.connector" ref="appleSilentype" type="Apple II Slot" label="Interface Port" />
+<connector id="s1.connector" ref="appleSilentype" type="Apple II Slot" label="Connector" />
 <port id="s1.port" ref="appleSilentype.connector" type="Apple Silentype Port" label="Silentype Port" />
 
 <device id="appleSilentype" label="Apple Silentype" image="images/Apple/Apple Silentype.png" group="peripherals" />
-<connector id="appleSilentype.connector" ref="s1" type="Apple II Slot" label="Slot Connector" />
+<connector id="appleSilentype.connector" ref="s1" type="Apple II Slot" label="Connector" />
 <component id="appleSilentype.io" class="AppleSilentype">
 	<property name="device" ref="appleSilentype" />
 	<property name="viewPath" value="${resourcePath}/images/print.png" />
@@ -303,24 +303,25 @@
     <setting ref="ssc.io" name="charactersPerLine" label="Characters per Line" type="select" options="40,72,80,132" />
     <setting ref="ssc.io" name="delayAfterCR" label="Delay After CR" type="checkbox" />
 </device>
-<connector id="s3.conn" ref="" type="Apple II Slot" label="Slot Connector" />
+<connector id="s2.conn" ref="" type="Apple II Slot" label="Connector" />
+<port id="s2.port" ref="" type="RS-232" label="Serial Port" image="images/Connectors/DB9 Female.png" />
 
 <device id="s3" label="Videx VideoTerm" image="images/Videx/Videx Videoterm.png" group="expansions">
     <setting ref="s3.io" name="mode" label="Character Set" type="select" options="Standard,Graphics,Inverse,German" />
 </device>
-<connector id="s4.conn" ref="" type="Apple II Slot" label="Slot Connector" />
+<connector id="s3.conn" ref="" type="Apple II Slot" label="Connector" />
 
 <device id="s4" label="Mountain Computer Apple Clock" image="images/Mountain Computer/Mountain Computer Apple Clock.png" group="expansions" />
-<connector id="s5.conn" ref="" type="Apple II Slot" label="Slot Connector" />
+<connector id="s5.conn" ref="" type="Apple II Slot" label="Connector" />
 
 
 
 <device id="s5" label="Apple Graphics Tablet Interface Card" image="images/Apple/Apple Graphics Tablet Interface Card.png" group="expansions" />
-<connector id="s5.connector" ref="appleGraphicsTablet" type="Apple II Slot" label="Slot 0" />
+<connector id="s5.connector" ref="appleGraphicsTablet" type="Apple II Slot" label="Connector" />
 <port id="s5.port" ref="appleGraphicsTablet.connector" type="Apple Graphics Tablet Port" label="Graphics Tablet Port" />
 
 <device id="appleGraphicsTablet" label="Apple Graphics Tablet" image="images/Apple/Apple Graphics Tablet.png" group="peripherals" />
-<connector id="appleGraphicsTablet.connector" ref="s5" type="Apple II Slot" label="Slot Connector" />
+<connector id="appleGraphicsTablet.connector" ref="s5" type="Apple II Slot" label="Connector" />
 <component id="appleGraphicsTablet.io" class="AppleGraphicsTablet">
 	<property name="device" ref="appleGraphicsTablet" />
 	<property name="viewPath" value="${resourcePath}/images/Apple/Apple Graphics Tablet View.png" />
@@ -331,7 +332,7 @@
 <device id="appleDiskIIInterface" label="Apple Disk II Interface Card" image="images/Apple/Apple Disk II Interface Card.png" group="expansions">
     <setting ref="appleDiskIIInterface.io" name="controllerType" label="Controller Type" type="select" options="13 Sector Controller,16 Sector Controller" />
 </device>
-<connector id="appleDiskIIInterface.connector" ref="" type="Apple II Slot" label="Slot Connector">
+<connector id="appleDiskIIInterface.connector" ref="" type="Apple II Slot" label="Connector">
 	<inlet ref="appleDiskIIInterface.io" property="controlBus" outletRef="controlBus" />
 </connector>
 <port id="appleDiskIIInterface.drive1" ref="appleDiskII.connector" type="Apple II Disk Port" label="Drive 1">
@@ -356,7 +357,7 @@
 <device id="appleDiskII" label="Apple Disk II" image="images/Apple/Apple Disk II.png" group="peripherals">
     <setting ref="appleDiskII.io" name="forceWriteProtected" label="Force Write Protected" type="checkbox" />
 </device>
-<connector id="appleDiskII.connector" ref="" type="Apple II Disk Port" label="Apple Disk II Connector" />
+<connector id="appleDiskII.connector" ref="" type="Apple II Disk Port" label="Connector" />
 <component id="appleDiskII.io" class="AppleDiskII">
     <property name="device" ref="appleDiskII" />
     <property name="image" value="" />
@@ -372,7 +373,7 @@
 <device id="appleDiskII2" label="Apple Disk II" image="images/Apple/Apple Disk II.png" group="peripherals">
     <setting ref="appleDiskII2.io" name="forceWriteProtected" label="Force Write Protected" type="checkbox" />
 </device>
-<connector id="appleDiskII2.connector" ref="" type="Apple II Disk Port" label="Apple Disk II Connector" />
+<connector id="appleDiskII2.connector" ref="" type="Apple II Disk Port" label="Connector" />
 <component id="appleDiskII2.io" class="AppleDiskII">
     <property name="device" ref="appleDiskII2" />
     <property name="image" value="" />
