@@ -3,7 +3,7 @@
 <edl version="1.0" label="Apple-1" image="images/Apple/Apple-1.png" description="The Apple-1 was an early personal computer, and the first in combining a microprocessor with a connection for a keyboard and a monitor. It featured a MOS 6502 microprocessor, 4 kiB RAM, and 256 bytes ROM.">
 
 <device id="apple1" label="Apple-1" image="images/Apple/Apple-1.png" group="system" />
-<port id="apple1.videoPort" ref="" type="Composite Video" label="Video Port" image="images/Generic/RCA Female.png">
+<port id="apple1.videoPort" ref="" type="Composite Video" label="Video Port" image="images/Connectors/RCA Female.png">
     <inlet ref="apple1.terminal" property="monitor" outletRef="connector" />
 </port>
 <port id="apple1.slot1" ref="" type="Apple-1 Slot" label="Slot 1" image="images/Apple/Apple-1 Slot.png" />
